# cmake_umbrella

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  tox.ini
apps/worker/: CMakeLists.txt
apps/worker/src/: CMakeLists.txt  main.cpp
lib/abstract/: CMakeLists.txt
lib/abstract/include/umbrella/abstract/: abstract.h
lib/abstract/src/: CMakeLists.txt  Config.cmake.in  abstract.cpp
lib/abstract/test/: CMakeLists.txt  test_abstract.cpp
lib/full/: CMakeLists.txt  Config.cmake.in
lib/logging/: CMakeLists.txt
lib/logging/include/umbrella/logging/: logging.h
lib/logging/src/: CMakeLists.txt  Config.cmake.in  logging.cpp
lib/logging/test/: CMakeLists.txt  test_logging.cpp
lib/proto/cnp/: CMakeLists.txt  Config.cmake.in  message.capnp
lib/proto/cnp/include/umbrella/proto/cnp/: message.capnp.h
lib/proto/pb/: CMakeLists.txt  Config.cmake.in  message.proto
lib/proto/pb/include/umbrella/proto/pb/: message.pb.h
lib/rpc/: CMakeLists.txt
lib/rpc/include/umbrella/rpc/: rpc.h
lib/rpc/src/: CMakeLists.txt  Config.cmake.in  rpc.cpp
lib/rpc/test/: CMakeLists.txt  test_rpc.cpp
test/: conftest.py  process.py  test_run_worker.py
tools/bintest/: setup.cfg
tools/bintest/bintest/: logger.py  process.py  sandbox.py
