[metadata]
name = bintest
version = 0.0.1
author = Lukasz Tekieli
author_email = tekieli.lukasz@gmail.com
description = Bunch of utilities to test application binaries
url = https://github.com/ltekieli/bintest
project_urls =
    Bug Tracker = https://github.com/ltekieli/bintest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    psutil
